--- a/html.html
+++ b/html.html
@@ -1,1 +1,4 @@
-<button type="button">bl unlock [[fastboot]] </button>
+<head>
+  <link rel="stylesheet" href="css.css">
+  <button> Bl unlock </button>
+</head>
