--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-  <link rel="stylesheet" href="css.css">
+  <link rel="stylesheet" href="css/css.css">
   <button> Bl unlock </button>
   <big> This is a testing BiGtext </big>
 </head>
