--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
   <link rel="stylesheet" href="css/css.css">
-  <button> Bl unlock <img>src=https://raw.githubusercontent.com/bunnyc3t/webmoe/refs/heads/main/img/unlock.svg> </button>
+  <button> Bl unlock </button>
   <big> This is a testing BiGtext </big>
 </head>
